# tfstride

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  threat-model.yml
apps/: __init__.py
apps/dashboard/: __init__.py  api_models.py  main.py  routes.py  scenarios.py  uploads.py  view_models.py
ci/terraform/: main.tf
docs/: when-to-use-tfstride.md
examples/: alb_ec2_rds_report.md  baseline_report.md  gcp_inventory_report.md  gcp_scaffold_report.md  lambda_deploy_role_report.md  nightmare_report.md  safe_report.md  sample_report.md
examples/aws/: aws_alb_ec2_rds_report.md  aws_baseline_report.md  aws_cross_account_trust_constrained_report.md  aws_cross_account_trust_unconstrained_report.md  aws_ecs_fargate_report.md  aws_inventory_report.md  aws_lambda_deploy_role_report.md  aws_nightmare_report.md  aws_safe_report.md
examples/azure/: azure_compute_report.md  azure_identity_report.md  azure_inventory_report.md  azure_key_vault_report.md  azure_nightmare_report.md  azure_nsg_precedence_report.md  azure_safe_report.md  azure_storage_report.md
examples/gcp/: gcp_baseline_report.md  gcp_cross_project_iam_report.md  gcp_inventory_report.md  gcp_lb_compute_sql_report.md  gcp_nightmare_report.md  gcp_safe_report.md  gcp_serverless_report.md
fixtures/: sample_aws_alb_ec2_rds_plan.json  sample_aws_baseline_plan.json  sample_aws_ecs_fargate_plan.json  sample_aws_lambda_deploy_role_plan.json  sample_aws_nightmare_plan.json  sample_aws_plan.json  sample_aws_safe_plan.json  sample_gcp_plan.json
fixtures/aws/: sample_aws_alb_ec2_rds_plan.json  sample_aws_baseline_plan.json  sample_aws_cross_account_trust_constrained_plan.json  sample_aws_cross_account_trust_unconstrained_plan.json  sample_aws_ecs_fargate_plan.json  sample_aws_lambda_deploy_role_plan.json  sample_aws_nightmare_plan.json  sample_aws_plan.json  sample_aws_safe_plan.json
fixtures/azure/: sample_azure_compute_plan.json  sample_azure_identity_plan.json  sample_azure_key_vault_plan.json  sample_azure_nightmare_plan.json  sample_azure_nsg_precedence_plan.json  sample_azure_plan.json  sample_azure_private_endpoint_plan.json  sample_azure_private_link_posture_plan.json  sample_azure_safe_plan.json  sample_azure_storage_plan.json  sample_azure_storage_unknown_plan.json
fixtures/gcp/: sample_gcp_baseline_plan.json  sample_gcp_cross_project_iam_plan.json  sample_gcp_lb_compute_sql_plan.json  sample_gcp_nightmare_plan.json  sample_gcp_plan.json  sample_gcp_safe_plan.json  sample_gcp_serverless_plan.json
src/cloud_threat_modeler/: __init__.py  __main__.py  app.py  cli.py  models.py
src/tfstride/: __init__.py  __main__.py  app.py  cli.py  config.py  filtering.py  models.py  resource_helpers.py  resource_metadata.py
tests/: __init__.py  test_analysis.py  test_analysis_coverage.py  test_analysis_indexes.py  test_analysis_resource_facts.py  test_aws_metadata.py  test_aws_policy_documents.py  test_aws_resource_decoration_stages.py  test_aws_resource_decorator.py  test_aws_resource_facts.py  test_aws_resource_mutations.py  test_cli.py  test_config.py  test_dashboard.py  test_finding_factory.py  test_gcp_attributes.py  test_gcp_iam_heritance.py  test_gcp_normalizers.py  test_gcp_org_policy_guardrails.py  test_gcp_org_policy_scenarios.py  test_gcp_provider.py  test_gcp_resource_decoration_stages.py  test_gcp_resource_decorator.py  test_gcp_resource_mutations.py  test_gcp_resource_utils.py  test_gcp_rules.py  test_iam_rules.py  test_json_documents.py  test_models.py  test_parser.py  test_policy_conditions.py  test_policy_trust_rules.py  test_provider_catalog.py  test_provider_contracts.py  test_provider_metadata_ownership.py  test_provider_plugin.py  test_provider_registry.py  test_provider_resource_capabilities.py  test_provider_resource_facts.py  test_report.py  (+10 more)
tests/analysis/: test_analysis_coverage.py  test_analysis_indexes.py  test_analysis_resource_facts.py  test_finding_factory.py  test_provider_boundaries.py  test_resource_concepts.py  test_trust_boundaries.py
tests/dashboard/: test_dashboard.py
tests/golden/: sample_aws_report_schema.json  sample_aws_report_snapshot.json
tests/helpers/: __init__.py  paths.py
(+640 files in other folders)
