[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tfstride"
version = "0.2.1"
description = "Deterministic cloud threat modeling for Terraform plan JSON."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Patrick" }
]
dependencies = []

[project.optional-dependencies]
dashboard = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
tfstride = "tfstride.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
